--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "ts-node src/main.ts"
+		"start": "ts-node src/main.ts",
+		"test": "tap src/tests.ts"
 	},
 	"dependencies": {
 		"fastify": "^3.14.0",
@@ -12,6 +13,8 @@
 		"typescript": "^4.2.3"
 	},
 	"devDependencies": {
-		"@types/node": "^14.14.34"
+		"@types/node": "^14.14.34",
+		"@types/tap": "^14.10.3",
+		"tap": "^14.11.0"
 	}
 }
