--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
 		"fastify": "^3.14.0",
 		"fp-ts": "^2.9.5",
 		"io-ts": "^2.2.16",
+		"io-ts-types": "^0.5.15",
+		"jsonpatch": "^3.0.1",
+		"monocle-ts": "^2.3.9",
+		"newtype-ts": "^0.3.4",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.1.0",
 		"typescript": "^4.2.3"
