--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
 	},
 	"dependencies": {
 		"fastify": "^3.14.0",
+		"fastify-multipart": "^4.0.2",
 		"fp-ts": "^2.9.5",
 		"io-ts": "^2.2.16",
 		"io-ts-types": "^0.5.15",
 		"jsonpatch": "^3.0.1",
 		"monocle-ts": "^2.3.9",
 		"newtype-ts": "^0.3.4",
+		"sharp": "^0.27.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.1.0",
 		"typescript": "^4.2.3"
 	},
 	"devDependencies": {
+		"@types/busboy": "^0.2.3",
 		"@types/node": "^14.14.34",
+		"@types/sharp": "^0.27.1",
 		"@types/tap": "^14.10.3",
 		"tap": "^14.11.0"
 	}
