--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/node": "^14.14.34",
 		"@types/sharp": "^0.27.1",
 		"@types/tap": "^14.10.3",
+		"form-data": "^4.0.0",
 		"tap": "^14.11.0"
 	}
 }
