--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	},
 	"dependencies": {
 		"fastify": "^3.14.0",
+		"fastify-basic-auth": "^1.0.1",
 		"fastify-multipart": "^4.0.2",
 		"fp-ts": "^2.9.5",
 		"io-ts": "^2.2.16",
