--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"jsonpatch": "^3.0.1",
 		"monocle-ts": "^2.3.9",
 		"newtype-ts": "^0.3.4",
+		"pino-pretty": "^4.7.1",
 		"sharp": "^0.27.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.1.0",
