--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "ts-node src/main.ts",
+		"start": "ts-node --transpile-only src/main.ts",
+		"check": "tsc",
 		"test": "tap src/tests/*.ts"
 	},
 	"dependencies": {
