--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,5 @@
 name: CI
-on: push
+on: [push, workflow_dispatch]
 jobs:
   check:
     name: Check for TypeScript errors
@@ -26,5 +26,14 @@ jobs:
   build:
     name: Build container image
     runs-on: ubuntu-latest
+    environment: DigitalOcean
     steps:
+    - uses: digitalocean/action-doctl@v2
+      with:
+        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     - uses: docker/build-push-action@v2
+      with:
+        tags: |
+          registry.digitalocean.com/${{ secrets.DIGITALOCEAN_CONTAINER_REGISTRY }}/image:demo-typescript-service-${{ github.sha }}
+          registry.digitalocean.com/${{ secrets.DIGITALOCEAN_CONTAINER_REGISTRY }}/image:demo-typescript-service-latest
+        push: true
