--- a/persistence/package.json
+++ b/persistence/package.json
@@ -6,6 +6,7 @@
 		"test": "tap src/tests/*.ts"
 	},
 	"dependencies": {
+		"@prisma/client": "^2.19.0",
 		"fastify": "^3.14.0",
 		"fastify-basic-auth": "^1.0.1",
 		"fastify-multipart": "^4.0.2",
@@ -24,6 +25,7 @@
 		"@types/node": "^14.14.34",
 		"@types/tap": "^14.10.3",
 		"form-data": "^4.0.0",
+		"prisma": "^2.19.0",
 		"tap": "^14.11.0"
 	}
 }
