--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -43,4 +43,4 @@ jobs:
         tags: |
           ${{ secrets.CONTAINER_REGISTRY_URL }}/image:demo-typescript-service_worker_${{ github.sha }}
           ${{ secrets.CONTAINER_REGISTRY_URL }}/image:demo-typescript-service_worker_latest
-        push: true
+        push: false
