--- a/.github/workflows/persistence.yml
+++ b/.github/workflows/persistence.yml
@@ -1,5 +1,10 @@
 name: "CI: persistence"
-on: [push, workflow_dispatch]
+on:
+  push:
+    paths:
+      - persistence
+      - .github/workflows/persistence
+  workflow_dispatch:
 defaults:
   run:
     working-directory: persistence
