Build persistence service with esbuild
Squashed commit of the following:

commit 496340f43970424f81cdcfef3430b119e15fbb0f
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 17:11:23 2021 +0300

    Push persistence to container registry

commit b65aea06d913129b26c16360be86e5a1b067137c
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 17:05:09 2021 +0300

    Split build for persistence into two stages

commit e5b8cfa6ea67899612bd5beb25f9f91da25afaec
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 16:05:22 2021 +0300

    Revert building worker with esbuild for now

    See https://github.com/evanw/esbuild/issues/1051

commit 2812a1872aa5f50d83856c810e9d79e8643cd32b
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 03:26:34 2021 +0300

    Fix

commit 78e81ad2ac0d877e1166e21dbde4149bb19ea0c5
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 02:09:07 2021 +0300

    Try running "prisma generate" explicitly

commit 09d7b9943037283cd4412e1dcedb1f5e4607f139
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 02:05:34 2021 +0300

    Rewrite persistence service with esbuild

commit c2fb6a21abdf91c55b7537ebf78c6072b03f8a40
Author: Ruslan Fadeev <kinrany@yandex.com>
Date:   Thu Mar 25 01:36:10 2021 +0300

    Do not push to container registry for now

--- a/persistence/Dockerfile
+++ b/persistence/Dockerfile
@@ -1,13 +1,21 @@
+FROM node:14-alpine AS build
+WORKDIR /app
+
+COPY package.json pnpm-lock.yaml tsconfig.json ./
+RUN npx pnpm --prod --frozen-lockfile install
+
+COPY prisma prisma/
+RUN npx --no-install prisma generate
+
+COPY src src/
+RUN npm run esbuild
+
+
 FROM node:14-alpine
 WORKDIR /app
 
-RUN npm i -g pnpm
-COPY package.json pnpm-lock.yaml tsconfig.json ./
-RUN pnpm --prod --frozen-lockfile install
-
-COPY prisma prisma/
-COPY src src/
+COPY --from=build /app/dist/main.js .
 
 VOLUME /config/config.json
 
-ENTRYPOINT ["pnpm", "start"]
+ENTRYPOINT ["node", "main.js"]
