--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:14-alpine
 WORKDIR /app
 
-RUN npm i -g pnpm
 COPY package.json pnpm-lock.yaml tsconfig.json ./
-RUN pnpm --prod --frozen-lockfile install
+RUN npx pnpm --prod --frozen-lockfile install
 
 COPY src src/
 
