--- a/persistence/package.json
+++ b/persistence/package.json
@@ -1,12 +1,14 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "ts-node --transpile-only src/main.ts",
 		"check": "tsc",
+		"esbuild": "esbuild src/main.ts --bundle --outfile=dist/main.js --platform=node --target=node14 --minify",
+		"start": "ts-node --transpile-only src/main.ts",
 		"test": "tap src/tests/*.ts"
 	},
 	"dependencies": {
 		"@prisma/client": "^2.19.0",
+		"esbuild": "^0.9.7",
 		"fastify": "^3.14.0",
 		"fastify-basic-auth": "^1.0.1",
 		"fastify-multipart": "^4.0.2",
@@ -17,7 +19,6 @@
 		"newtype-ts": "^0.3.4",
 		"pino-pretty": "^4.7.1",
 		"prisma": "^2.19.0",
-		"ts-node": "^9.1.1",
 		"tslib": "^2.1.0",
 		"typescript": "^4.2.3"
 	},
@@ -26,6 +27,7 @@
 		"@types/node": "^14.14.34",
 		"@types/tap": "^14.10.3",
 		"form-data": "^4.0.0",
-		"tap": "^14.11.0"
+		"tap": "^14.11.0",
+		"ts-node": "^9.1.1"
 	}
 }
