--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -42,6 +42,6 @@ jobs:
     - uses: ./.github/actions/build-image
       with:
         service-name: worker
-        push: false
+        push: true
         registry: ${{ secrets.CONTAINER_REGISTRY_URL }}
         token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
